--- a/Public/index.html
+++ b/Public/index.html
@@ -10,16 +10,16 @@
     <link rel="stylesheet" href="assets/styles/results.css" media="screen" title="no title" charset="utf-8">
     <link rel="stylesheet" href="assets/styles/takeassessment.css" media="screen" title="no title" charset="utf-8">
   </head>
-  <body ng-controller="mainCtrl">
-    <header class="parentDiv"><ul>
-    </ul></header>
+  <body ng-controller="homeCtrl">
     <div ui-view></div>
     <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.12.4.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.1/angular-ui-router.js"></script>
     <script src="scripts/app.js"></script>
-    <script src="scripts/controllers/mainCtrl.js"></script>
+    <script src="scripts/controllers/homeCtrl.js"></script>
+    <script src="scripts/controllers/loginCtrl.js"></script>
+    <script src="scripts/controllers/resultsCtrl.js"></script>
     <script src="scripts/mainService.js"></script>
-    <script src="scripts/controllers/assessmentsCtrl.js"></script>
+    <script src="scripts/controllers/takeassessmentsCtrl.js"></script>
   </body>
 </html>
