--- a/Public/index.html
+++ b/Public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Psychology App</title>
+    <title>Lyft</title>
     <link rel="stylesheet" href="assets/styles/reset.css" media="screen" title="no title" charset="utf-8">
     <link rel="stylesheet" href="assets/styles/home.css" media="screen" title="no title" charset="utf-8">
     <link rel="stylesheet" href="assets/styles/login.css" media="screen" title="no title" charset="utf-8">
