--- a/Public/index.html
+++ b/Public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lyft</title>
+    <title>Elevate</title>
     <link rel="stylesheet" href="assets/styles/reset.css" media="screen" title="no title" charset="utf-8">
     <link rel="stylesheet" href="assets/styles/home.css" media="screen" title="no title" charset="utf-8">
     <link rel="stylesheet" href="assets/styles/login.css" media="screen" title="no title" charset="utf-8">
@@ -23,6 +23,6 @@
     <script src="scripts/controllers/resultsCtrl.js"></script>
     <script src="scripts/mainService.js"></script>
     <script src="scripts/controllers/assessmentsCtrl.js"></script>
-    <script src="scripts/controllers/assessmentsCtrl2.js"></script>    
+    <script src="scripts/controllers/assessmentsCtrl2.js"></script>
   </body>
 </html>
